codex: extract OpenCV visual processing into shaft-visual